src/global/core-modules/emr-server-mgmt/objects/EmrServerContactReference__c/EmrServerContactReference__c.object-meta.xml
<CustomObject>
    <label>EMR Server Contact Reference</label>
    <nameField>
        <displayFormat>ESCR-{0000}</displayFormat>
        <label>EMR Server Contact Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMR Server Contact References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>