src/global/core-modules/emr-server-mgmt/objects/EmrServerContactReference__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Identifier</label>
    <length>60</length>
    <type>Text</type>
</CustomField>