src/global/core-modules/emr-server-mgmt/objects/EmrServerContactReference__c/fields/LastSyncDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastSyncDateTime__c</fullName>
    <label>Last Sync</label>
    <type>DateTime</type>
</CustomField>